# Qt_WindowsService

./: .gitignore  CMakeLists.txt  SampleService.cpp  SampleService.hpp  ServiceBase.cpp  ServiceInstaller.cpp  ServiceInstaller.hpp  ThreadPool.hpp  main.cpp
